@@ -1,3 +1,7 @@
+Thu Sep 06 13:15:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* doc/tds.html: update for tds9
+	* src/tds/read.c: work if initial in_pos is != 0
+
 Sat Aug 25 12:32:01 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
 	- use ODBC_API instead of SQL_API to allow combined compile
